--- a/src/app/component/main-screen/main-screen.component.html
+++ b/src/app/component/main-screen/main-screen.component.html
@@ -1,1 +1,5 @@
-<p>main-screen works!</p>
+<app-navigation></app-navigation>
+<div class="content grey-bg" >
+    <router-outlet></router-outlet>
+</div>
+        
